--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -42,6 +42,7 @@
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
                                     <form class="user" th:action="@{/login}" method="post">
+                                        <input type="hidden" id="csrf-param" />
                                         <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="username" required></div>
                                         <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" required></div>
                                         <!-- 
@@ -78,15 +79,23 @@
 	
 	<script>
 		$(document).ready(function() {
-			
+
+
+		    /*params is object of class URLsearchparams, if the URL contains 'error'
+		    * then the showError function will be triggered*/
 			var params = new URLSearchParams(document.location.search);
 			if(params.has('error')) {
 				showError('Failed to login!');
 			}
+
+			/*Adding the name and value(token) to the id csrf*/
+            initCsrf(function(csrf) {
+                $("#csrf-param").attr('name', csrf.param);
+                $("#csrf-param").val(csrf.token);
+            });
 			
 		});
 	</script>
      
 </body>
-
 </html>
